# raicom2026_x2_autonomy

./: .gitignore  Dockerfile  RAICOM2026_CONTROL_GATE_RUNBOOK.md
Raicom2026/: CHANGELOG.md  Dockerfile  README.md  start
Raicom2026/DOCS/: ENV_CHECK.md  MOTION_DEBUG_REPORT.md  SYSTEM_STATUS.md  TEAM_AUTONOMY_RUNBOOK.md
Raicom2026/example/py/: get_mode.py  set_mode.py
Raicom2026/launch/: run_autonomy.sh
Raicom2026/raicom2026_x2_autonomy/: .gitignore  CMakeLists.txt  README.md
Raicom2026/raicom2026_x2_autonomy/include/aimdk_msgs/msg/detail/: common_request__struct.hpp  common_request__traits.hpp  common_task_response__struct.hpp  common_task_response__traits.hpp
Raicom2026/raicom2026_x2_autonomy/src/: autonomy_state.h  controller.cpp  main.cpp  mc_control_inspector.h  mc_ros2_controller.cpp  mc_ros2_controller.h  mc_state_checker.cpp  mc_state_checker.h  preset_motion_wrapper.cpp  preset_motion_wrapper.h  robot_state_monitor.cpp  robot_state_monitor.h  stability_controller.h  stability_wait_node.cpp  stability_wait_node.h  state_machine.cpp
Raicom2026/raicom2026_x2_autonomy/src/localization/: centroid_filter.cpp  centroid_filter.h
Raicom2026/scripts/: run_all.sh
raicom2026_x2_autonomy/: .gitignore  CMakeLists.txt  README.md
raicom2026_x2_autonomy/src/: autonomy_state.h  controller.cpp  main.cpp  mc_control_inspector.cpp  mc_ros2_controller.cpp  mc_ros2_controller.h  planner.cpp  robot_state_monitor.cpp  ros2_control_node.cpp  ros2_control_node.h  stability_controller.cpp  state_machine.cpp
